--- a/index.html
+++ b/index.html
@@ -22,17 +22,39 @@
             </ul>
           </div>
         </div>
+        <!--===============メディアクエリ================-->
+        <nav class="header__nav nav" id="js-nav">
+          <ul class="nav__items nav-items">
+            <li class="nav-items__item"><a href="">Home</a></li>
+            <li class="nav-items__item"><a href="">About</a></li>
+            <li class="nav-items__item"><a href="">Service</a></li>
+            <li class="nav-items__item"><a href="">Portfolio</a></li>
+            <li class="nav-items__item"><a href="">Contact</a></li>
+          </ul>
+        </nav>
+
+        <div class="openbtn hamburger" id="js-hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      <!--================メディアクエリ終了部分============-->
       </div>
         <div class="wrapper">
           <div class="caption">
             <div class="vertical">
-              <h2>Are you looking for a xxxxxx xxxxxxx?<br>
-                  Then you’ve come to the right place.</h2>
+              <h2>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx?<br>
+                  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</h2>
 
-              <h5>Hi there, I am xxxxxxx xxxx, an experienced xxxxxx xxxxxx, and xxxxxxx in xxxx xxxxx.</h5>
+              <h5>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</h5>
             </div>
           </div>
         </div>
     </div>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
+
