--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </div>
         </div>
         <!--===============メディアクエリ================-->
-<!--         <nav class="header__nav nav" id="js-nav">
+        <nav class="header__nav nav" id="js-nav">
           <ul class="nav__items nav-items">
             <li class="nav-items__item"><a href="">Home</a></li>
             <li class="nav-items__item"><a href="">About</a></li>
@@ -32,7 +32,7 @@
             <li class="nav-items__item"><a href="">Portfolio</a></li>
             <li class="nav-items__item"><a href="">Contact</a></li>
           </ul>
-        </nav> -->
+        </nav>
 
         <div class="openbtn hamburger" id="js-hamburger">
           <span></span>
