--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" media="screen">
-    <title></title>
+    <title>YINGSHU's Web</title>
   </head>
   <body>
     <div id="main-img">
       <div class="header">
         <div class="wrapper">
           <div class="half position">
-            <p>YINGSHU'Web</p>
+            <p>YINGSHU's Web</p>
           </div>
           <div class="half position">
             <ul id="gnav">
@@ -51,6 +51,10 @@
             </div>
           </div>
         </div>
+      <footer>
+          <p id="page-top"><a href="#"><img src="img/top_btn.jpg" alt="" width="40px" height="40px"></a></p>
+          <p class="copyright">🄫YINGSHU's Web</p> 
+        </footer>
     </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
