--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
         </div>
       <footer>
-          <p id="page-top"><a href="#"><img src="img/top_btn.jpg" alt="" width="40px" height="40px"></a></p>
+          <p id="page-top"><a href="#"><img src="top_btn.jpg" alt="" width="40px" height="40px"></a></p>
           <p class="copyright">🄫YINGSHU's Web</p> 
         </footer>
     </div>
