--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       <!--================メディアクエリ終了部分============-->
       </div>
         <div class="wrapper">
+          <div class="text">
+            Yingshu's Web
+          </div>
           <div class="caption">
             <div class="vertical">
               <h2>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx?<br>
