--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>YINGSHU's Web</title>
   </head>
   <body>
-    <div id="main-img">
+    <div id="particles-js"></div>
+      <div id="background">
       <div class="header">
         <div class="wrapper">
           <div class="half position">
@@ -40,29 +41,33 @@
           <span></span>
         </div>
       <!--================メディアクエリ終了部分============-->
-      </div>
+    </div>
         <div class="wrapper">
           <div class="text">
             Yingshu's Web
           </div>
           <div class="caption">
             <div class="vertical">
-              <h2>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx?<br>
-                  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</h2>
+              <h2>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br>
+                  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</h2>
 
-              <h5>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</h5>
+              <h5>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</h5>
             </div>
           </div>
         </div>
-      <footer>
-          <p id="page-top"><a href="#"><img src="top_btn.jpg" alt="" width="40px" height="40px"></a></p>
+      </div>
+        <div class="container">xxxxxxxxxxx</div>
+        <footer>
+          <p class="page-top"><a href="#"><img src="img/top_btn.jpg" alt="" width="40px" height="40px"></a></p>
           <p class="copyright">🄫YINGSHU's Web</p> 
         </footer>
-    </div>
     
+
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </body>
 </html>
+
 
