--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
         <div class="container">xxxxxxxxxxx</div>
         <footer>
-          <p class="page-top"><a href="#"><img src="img/top_btn.jpg" alt="" width="40px" height="40px"></a></p>
+          <p class="page-top"><a href="#"><img src="top_btn.jpg" alt="" width="40px" height="40px"></a></p>
           <p class="copyright">🄫YINGSHU's Web</p> 
         </footer>
     
