--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="header">
         <div class="wrapper">
           <div class="half position">
+            <img  class="logo" src="logo.png" alt="" width="55px" height="55px">
             <p>YINGSHU's Web</p>
           </div>
           <div class="half position">
