--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="wrapper">
           <div class="half position">
             <img  class="logo" src="logo.png" alt="" width="55px" height="55px">
-            <p>YINGSHU's Web</p>
+            <p class="logo_name">YINGSHU's Web</p>
           </div>
           <div class="half position">
             <ul id="gnav">
