--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         </div>
         <!--===============メディアクエリ================-->
         <nav class="header__nav nav" id="js-nav">
+          <form method="get" id="searchform" action="">
+            <input type="text" name="s" id="s" placeholder="Search" />
+            <button type="submit">
+              <img src="search.svg" alt="検索する">
+            </button>
+          </form>      
           <ul class="nav__items nav-items">
             <li class="nav-items__item"><a href="">Home</a></li>
             <li class="nav-items__item"><a href="">About</a></li>
