--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       </div>
 <!--         <div class="container">xxxxxxxxxxx</div> -->
         <footer>
-          <p class="page-top"><a href="#"><img src="top_btn.jpg" alt="" width="40px" height="40px"></a></p>
-          <p class="copyright">🄫YINGSHU's Web</p> 
+<!--           <p class="page-top"><a href="#"><img src="top_btn.jpg" alt="" width="40px" height="40px"></a></p>
+          <p class="copyright">🄫YINGSHU's Web</p>  -->
         </footer>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
